# price-memory-spider

./: .env.example  .env.production  .gitignore  API_DOCUMENTATION.md  deploy.sh  docker-compose.monitor.yml  docker-compose.yml  init_database.py  main.py  pyproject.toml  spider.db
ai/: api.py
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
src/: main.py  websocket_handler.py
src/ai/: api.py  embedding.py
src/api/: __init__.py  routes.py
src/config/: config.py
src/dao/: supabase_client.py  supabase_repo.py
src/playwrite/: amazon_website.py  bowser.py  bowser_utils.py
src/runtime/: node_runtime.py
src/scripts/: seed_initial_data.py
src/services/: enhanced_price_scraper.py  export_service.py  intelligent_alert_system.py  price_history_service.py  price_monitor.py  task_scheduler.py
src/sites/: amazon.py  jd.py  pinduoduo.py  suning.py  taobao.py  universal.py
src/utils/: url_util.py
src/workers/: amazon_worker.py
test/: pytest.ini  test_amazon.py
tests/: conftest.py  run_batch_export_check.py  run_xlsx_export_check.py  test_alerts.py  test_alerts_cooldown.py  test_basic.py  test_collab.py  test_graphql.py  test_hourly_trend.py  test_interactions.py  test_trend.py
